# qr-code-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.toml  docker-compose.yml  pyproject.toml  requirements.txt
src/: cli.py  main_db.db  server.py
src/server_utils/: config.py  db.py  home.py  shared.py
src/static/css/: main.css
src/static/js/: main.js  qrcode.min.js
src/templates/: error.html  generic_error.html  index.html  password.html  stats.html  template.html
